5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1646_2728.log
== TEST (2019-04-09 17:17:43) 
-- CODE:
percurso = float(input("Distancia percorrida: "))
tipo = input("Qual o tipo do carro? A ou B? ")

if(tipo == "A"):
	msg = percurso / 8
if(tipo == "B"):
	msg = percuso / 12 

print(round(msg, 2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg = percuso / 12 
NameError: name 'percuso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:17:50) 
-- CODE:
percurso = float(input("Distancia percorrida: "))
tipo = input("Qual o tipo do carro? A ou B? ")

if(tipo == "A"):
	msg = percurso / 8
if(tipo == "B"):
	msg = percuso / 12 

print(round(msg, 2 ))
-- EXECUTION TIME:
0.182116
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2728/main.py", line 7, in <module>
    msg = percuso / 12 
NameError: name 'percuso' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:18:50) 
-- CODE:
percurso = float(input("Distancia percorrida: "))
tipo = input("Qual o tipo do carro? A ou B? ")
consumo = float(input("Qual o consumo do carro por km: "))
if(tipo == "A"):
	msg = percurso / consumo
if(tipo == "B"):
	msg = percuso / consumo

print(round(msg, 2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    consumo = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:19:01) 
-- CODE:
percurso = float(input("Distancia percorrida: "))
tipo = input("Qual o tipo do carro? A ou B? ")
consumo = float(input("Qual o consumo do carro por km: "))
if(tipo == "A"):
	msg = percurso / consumo
if(tipo == "B"):
	msg = percuso / consumo

print(round(msg, 2 ))
-- EXECUTION TIME:
0.156448
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2728/main.py", line 3, in <module>
    consumo = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:19:32) 
-- CODE:
percurso = float(input("Distancia percorrida: "))
tipo = input("Qual o tipo do carro? A ou B? ")

if(tipo == "A"):
	msg = percurso / 8
else:
	msg = percuso / 12

print(round(msg, 2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg = percuso / 12
NameError: name 'percuso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:19:51) 
-- CODE:
percurso = float(input("Distancia percorrida: "))
tipo = input("Qual o tipo do carro? A ou B? ")

if(tipo == "A"):
	msg = percurso / 8
if(tipo == "B"):
	msg = percurso / 12

print(round(msg, 2 ))
-- EXECUTION TIME:
0.168398
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
